objects/Lead/fields/CountryAlpha2Code__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha2Code__c</fullName>
    <label>CountryAlpha2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>