objects/Lead/fields/CountryAlpha3Code__c.field-meta.xml
<CustomField>
    <fullName>CountryAlpha3Code__c</fullName>
    <label>CountryAlpha3Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>