objects/Lead/validationRules/Block_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Owner_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    OR(
        ISBLANK(Country),
        ISPICKVAL(LeadSource, &quot;&quot;),
        AND(
            ISBLANK(NumberOfEmployees),
            $Profile.Name &lt;&gt; &apos;Contract Manager&apos;
        )
    )
)</errorConditionFormula>
    <errorMessage>Please complete the highlighted fields before proceeding.</errorMessage>
</ValidationRule>